--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".SignupActivity">
-
-        </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SignupActivity"></activity>
         <activity android:name=".LoginActivity">
 
-
+        </activity>
+        <activity android:name=".MotDePasseOublieActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
