--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,14 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-auth:11.6.0'
     // ATTENTION D'AVOIR LA MEME VERSION POUR IMPLEMENTATION ET COMPILATION
+    compile 'com.google.firebase:firebase-core:11.6.0'
     compile 'com.google.firebase:firebase-auth:11.6.0'
     compile 'com.google.android.gms:play-services-auth:11.6.0'
     compile 'com.facebook.android:facebook-login:[4,5)'
+
+
+    // Required only if Facebook login support is required
+    compile('com.facebook.android:facebook-android-sdk:4.27.0')
 
 
 }
