Add : début rejoindre championnat Add : Menu principal simpliste

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".Championnat.CreerChampionnatActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".CreerChampionnat.CreerChampionnatActivity"/>
+        <activity android:name=".RejoindreChampionnat.RejoindreChampionnatActivity"/>
+        <activity android:name=".MenuPrincipalActivity.MenuPrincipalActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
