--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,15 @@
         <activity android:name=".MainActivity" />
 
         <activity android:name=".Signup.SignupActivity"></activity>
-        <activity android:name=".Login.LoginActivity"/>
+        <activity android:name=".Login.LoginActivity"><intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter> </activity>
         <activity android:name=".MotDePasseOublie.MotDePasseOublieActivity"/>
         <activity android:name=".CreerChampionnat.CreerChampionnatActivity"/>
         <activity android:name=".RejoindreChampionnat.RejoindreChampionnatActivity"/>
         <activity android:name=".MenuPrincipalActivity.MenuPrincipalActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
 
 
