Création des fragments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,23 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Signup.SignupActivity" />
         <activity android:name=".Login.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".MotDePasseOublie.MotDePasseOublieActivity" />
         <activity android:name=".CreerChampionnat.CreerChampionnatActivity" />
         <activity android:name=".RejoindreChampionnat.RejoindreChampionnatActivity" />
         <activity android:name=".MenuPrincipal.MenuPrincipalActivity" />
         <activity android:name=".Profil.ProfilActivity" />
-        <activity android:name=".PageChampionnat.PageChampionnatActivity" />
+        <activity
+            android:name=".BottomNavigation.BottomNavigationActivity"
+            android:label="@string/title_activity_bottom_navigation">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
